--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,6 +29,7 @@
 		</section>
 	 <footer class="main">
 	 <a href="http://es.wikipedia.org/wiki/Quiz"> ¿Qué es un Quiz?</a>
+	 <a href="https://github.com/adridb/Proyecto-Quiz">Proyecto en GitHub </a>
 	 </footer>
 	 </div>
 	</body>
