--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
 
-    <p>El portal donde pssssssodrá crear sus propios juegos</p>
+    <p>El portal donde podrá crear sus propios juegos</p>
      
 
