--- a/views/quizzes/index.ejs
+++ b/views/quizzes/index.ejs
@@ -10,6 +10,7 @@
   <tr>
     <td>
         <a href="/quizzes/<%=quizzes[i].id %>"><%= quizzes[i].question %></a>
+        <a href="/quizzes/<%=quizzes[i].id/edit %>"> Editar</a>
         </td>
      </tr> 
   <% } %>
