--- a/views/quizzes/index.ejs
+++ b/views/quizzes/index.ejs
@@ -10,7 +10,9 @@
   <tr>
     <td>
         <a href="/quizzes/<%=quizzes[i].id %>"><%= quizzes[i].question %></a>
-        <a href="/quizzes/<%=quizzes[i].id/edit %>"> Editar</a>
+        </td>
+        <td> 
+        <a href="/quizzes/<%=quizzes[i].id %>/edit"> <button>Editar</button></a>
         </td>
      </tr> 
   <% } %>
