--- a/views/quizzes/show.ejs
+++ b/views/quizzes/show.ejs
@@ -3,4 +3,14 @@
     <input type="text" name="answer" value="<%=answer%>" placeholder="Responda aquí"></input>
     <input type="submit" value="Comprobar"></input>
     </form>
-  
+<p>
+  <a href="/quizzes/<%= quiz.id %>/comments/new"><button>Nuevo comentario</button></a>
+</p>
+
+<p><strong>Comentarios:</strong></p>
+
+<ul>
+<% for (var i in quiz.Comments) { %>
+	<li> <%=quiz.Comments[i].text %> </li>
+<% } %>
+</ul>
