--- a/views/quizzes/show.ejs
+++ b/views/quizzes/show.ejs
@@ -3,10 +3,11 @@
     <input type="text" name="answer" value="<%=answer%>" placeholder="Responda aquí"></input>
     <input type="submit" value="Comprobar"></input>
     </form>
+        <% if(session.user){ %>
 <p>
   <a href="/quizzes/<%= quiz.id %>/comments/new"><button>Nuevo comentario</button></a>
 </p>
-
+ <% } %>
 <p><strong>Comentarios:</strong></p>
 
 <ul>
