--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -10,7 +10,7 @@
   <b>Es Administrador:</b>
   <%= user.isAdmin ? "Si" : "No" %>
 </p>
-
+ <% if(session.user){ %>
 <p>
   <a href="/users/<%= user.id %>/edit"> 
     <button type="button"> Editar </button>
@@ -22,6 +22,7 @@
     </button>
   </a>
 </p>
+ <% } %>
 
 <a href="/users"> 
    <button type="button">Volver</button>
