--- a/views/quizzes/index.ejs
+++ b/views/quizzes/index.ejs
@@ -12,6 +12,9 @@
         <a href="/quizzes/<%=quizzes[i].id %>"><%= quizzes[i].question %></a>
         </td>
         <% if(session.user){ %>
+    <% if(session.user.isAdmin || session.user.id === quizzes[i].AuthorId){ %>
+
+
         <td> 
         <a href="/quizzes/<%=quizzes[i].id %>/edit"> <button>Editar</button></a>
         </td>
@@ -19,6 +22,7 @@
         <a href="/quizzes/<%=quizzes[i].id %>?_method=DELETE" onClick="return confirm('Borrar: <%=quizzes[i].question %>');"> <button>Borrar</button></a>
         </td>
         <% } %>
+           <% } %>
      </tr> 
   <% } %>
 </table>
