--- a/views/quizzes/show.ejs
+++ b/views/quizzes/show.ejs
@@ -15,8 +15,8 @@
  var comment = quiz.Comments[i];
   if(comment.accepted){ %>
 	<li> <%=comment.text %> </li>
-<% } else if(session.user) { %>
-<li> <%=comment.text %> </li>
+<% } else if(session.user && (session.user.isAdmin || (quiz.AuthorId === session.user.id))) { %>
+<li> <%=quiz.AuthorId %>  </li>
  <a href="/quizzes/<%= quiz.id %>/comments/<%= comment.id %>/accept?_method=PUT"><button>Aceptar</button></a>
  <% } %>
   <% } %>
