--- a/views/quizzes/show.ejs
+++ b/views/quizzes/show.ejs
@@ -17,7 +17,7 @@
     </p>
     </form>
     </p>
-    
+
         <% if(session.user){ %>
 <p>
   <a href="/quizzes/<%= quiz.id %>/comments/new"><button>Nuevo comentario</button></a>
@@ -29,7 +29,7 @@
 <% for (var i in quiz.Comments) {
  var comment = quiz.Comments[i];
   if(comment.accepted){ %>
-	<li> <%=comment.text %> </li>
+	<li> <%= comment.text %> <p>Escrito por: <%= comment.Author.username %>  </p></li>
 <% } else if(session.user && (session.user.isAdmin || (quiz.AuthorId === session.user.id))) { %>
 <li> <%=quiz.AuthorId %>  </li>
  <a href="/quizzes/<%= quiz.id %>/comments/<%= comment.id %>/accept?_method=PUT"><button>Aceptar</button></a>
