--- a/views/quizzes/show.ejs
+++ b/views/quizzes/show.ejs
@@ -31,7 +31,7 @@
   if(comment.accepted){ %>
 	<li> <%= comment.text %> <p>Escrito por: <%= comment.Author.username %>  </p></li>
 <% } else if(session.user && (session.user.isAdmin || (quiz.AuthorId === session.user.id))) { %>
-<li> <%=quiz.AuthorId %>  </li>
+<li> <%= comment.text %> <p>Escrito por: <%= comment.Author.username %>  </p></li>
  <a href="/quizzes/<%= quiz.id %>/comments/<%= comment.id %>/accept?_method=PUT"><button>Aceptar</button></a>
  <% } %>
   <% } %>
